<resources>
    <string name="app_name">Centennial Hospital</string>
    <string name="id">ID</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="patient_s_disease">Patient\'s Disease</string>
    <string name="patient_s_bill">Patient\'s Bill</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="patient_s_id">Patient\'s Id</string>
    <string name="patient_s_age">Patient\'s Age</string>
    <string name="sign_out">Sign Out</string>
    <string name="start">Start</string>
    <string name="email_address">Email Address</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_here">New user ? Register here.</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_log_in_here">Already registered? LOG IN here</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
</resources>