<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
   android:theme="@style/RecyclerView">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/patient_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="ID"/>

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_s_name"
            android:maxLines="1"
            android:layout_toStartOf="@id/patient_id"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/patient_name"
            android:text="@string/age"/>

        <TextView
            android:id="@+id/patient_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/patient_age"
            android:text="@string/patient_s_disease"/>

        <TextView
            android:id="@+id/patient_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/patient_dis"
            android:text="@string/patient_s_bill"
            android:inputType=""/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>